feat: add private conversation map locations
